--- a/PAPY/Cours 1/TP1.ipynb
+++ b/PAPY/Cours 1/TP1.ipynb
@@ -2248,6 +2248,34 @@
     "J'ai gagné par forfait en 6 coups !!!\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "50a1d3c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mémorisez un nombre entre 1 et 100, je vais essayer de le retrouver.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J'ai trouvé 45 en 8 coups !!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reponse (It's better if you run the script directly)\n",
+    "from bonus_tp1 import Game\n",
+    "\n",
+    "Game().run()"
+   ]
   }
  ],
  "metadata": {
