--- a/PAPY/Cours 2/PAPY_TP2_eleves.ipynb
+++ b/PAPY/Cours 2/PAPY_TP2_eleves.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "09054587",
    "metadata": {},
    "outputs": [],
@@ -556,10 +556,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 30,
    "id": "0a3813fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -567,29 +576,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 35,
    "id": "401a97e4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'vecteur'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\remi\\Desktop\\MIMI_MASTER\\PAPY\\Cours 2\\PAPY_TP2_eleves.ipynb Cell 28\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/remi/Desktop/MIMI_MASTER/PAPY/Cours%202/PAPY_TP2_eleves.ipynb#X31sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mvecteur\u001b[39;00m \u001b[39mimport\u001b[39;00m Vecteur\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'vecteur'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from vecteur import Vecteur"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 33,
    "id": "adf5662d",
    "metadata": {},
    "outputs": [
@@ -597,20 +594,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.0 4.0\n",
-      "3.0 4.0\n",
-      "(3.0, 4.0)\n",
-      "(3.0, 4.0)\n",
+      "3 4\n",
+      "3 4\n",
+      "x = 3.0, y = 4.0\n",
+      "x = 3, y = 4\n",
       "5.0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Vecteur(3.0, 4.0)"
+       "Vecteur(3,4)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 41,
    "id": "89aa8258",
    "metadata": {},
    "outputs": [
@@ -676,16 +673,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1.0, 5.0)\n",
-      "(0.7071067811865476, 0.7071067811865475)\n"
+      "x = 1, y = 5\n",
+      "x = 0.7071067811865476, y = 0.7071067811865476\n"
      ]
     }
    ],
    "source": [
+    "from vecteur import Vecteur\n",
     "from math import pi\n",
     "v2=Vecteur.from_iterable([1,5])\n",
     "print(v2)\n",
-    "v2=Vecteur.from_polar(1,pi/4)\n",
+    "v2=Vecteur.from_polar(1.0,pi/4.0)\n",
     "print(v2)"
    ]
   },
@@ -713,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "id": "08712822",
    "metadata": {},
    "outputs": [
@@ -721,19 +719,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0\n",
-      "catching exception: val='1' must be a real\n"
+      "2\n",
+      "1\n",
+      "catching exception: x needs to be a real numbers, the input 1 is of type <class 'str'>\n"
      ]
     }
    ],
    "source": [
+    "from vecteur import Vecteur\n",
     "v3=Vecteur(1,2)\n",
     "print(v3.y)\n",
     "v3.y=1\n",
+    "print(v3.y)\n",
     "try:\n",
     "    v3.y=\"1\"\n",
     "except Exception as e:\n",
-    "    print(\"catching exception:\", e)"
+    "    print(\"catching exception:\", e)\n"
    ]
   },
   {
@@ -783,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 1,
    "id": "c8277677",
    "metadata": {
     "scrolled": true
@@ -793,49 +794,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(v1==v2)=False\n",
+      "(v1==v2)=None\n",
       "(v1==[3,4])=False\n",
-      "(v1==Vecteur(3,4))=False\n",
+      "(v1==Vecteur(3,4))=True\n",
       "\n",
       "Test de l'addition de vecteurs:\n",
       "----------------------\n",
       "Attendu: (3.0, 4.0)+(1.0, 1)=(4.0, 5.0) \n",
-      "Calculé: (3.0, 4.0)+(1.0, 1)=(4.0, 5.0)\n",
+      "Calculé: x = 3, y = 4+x = 1.0, y = 1=x = 4.0, y = 5\n",
       "\n",
-      "(4.0, 7.0)\n",
-      "unsupported operand type(s) for +: 'Vecteur' and 'str'\n",
-      "(3.7071067811865475, 4.707106781186548)\n",
-      "(-3.7071067811865475, -4.707106781186548)\n",
+      "can only concatenate str (not \"Vecteur\") to str\n",
+      "x = 3, y = 4\n",
+      "x = 3.7071067811865475, y = 4.707106781186548\n",
+      "x = -3.7071067811865475, y = -4.707106781186548\n",
       "1.0\n",
-      "-v1=Vecteur(-3.7071067811865475, -4.707106781186548) (-3.7071067811865475, -4.707106781186548)\n",
-      "Vecteur(1,-1)*v2=1.1102230246251565e-16 (0)\n",
-      "math.sqrt(2)*v2=Vecteur(1.0000000000000002, 1.0) (1,1)\n"
+      "-v1=Vecteur(-3.7071067811865475,-4.707106781186548) (-3.7071067811865475, -4.707106781186548)\n",
+      "Vecteur(1,-1)*v2=0.0 (0)\n",
+      "v2*math.sqrt(2)=Vecteur(1.0000000000000002,1.0000000000000002) (1,1)\n",
+      "math.sqrt(2)*v2=Vecteur(1.0000000000000002,1.0000000000000002) (1,1)\n"
      ]
     }
    ],
    "source": [
     "import math\n",
+    "from vecteur import Vecteur\n",
+    "\n",
     "v1 = Vecteur(3, 4)\n",
+    "v2=Vecteur.from_polar(1.0,math.pi/4.0)\n",
+    "v3 = Vecteur(1.0, 1)\n",
     "print(f\"{(v1==v2)=}\")\n",
     "print(f\"{(v1==[3,4])=}\")\n",
     "print(f\"{(v1==Vecteur(3,4))=}\")\n",
     "\n",
     "print(\"\\nTest de l'addition de vecteurs:\\n----------------------\")\n",
     "print(f\"Attendu: (3.0, 4.0)+(1.0, 1)=(4.0, 5.0) \\nCalculé: {v1}+{v3}={v1+v3}\\n\")\n",
-    "print([1,3]+v1)\n",
+    "#print([1,3]+v1)\n",
     "try: \n",
     "    \"v1\"+v1 \n",
     "except Exception as e:\n",
     "    print(e)\n",
-    "    \n",
+    "\n",
+    "print(v1) \n",
     "v1+=v2\n",
     "print(v1)\n",
     "print(-v1)\n",
     "print(v2.norme)\n",
     "\n",
-    "## produit (scalaire)\n",
+    "# produit (scalaire)\n",
     "print(f\"{-v1=} (-3.7071067811865475, -4.707106781186548)\")\n",
     "print(f\"{Vecteur(1,-1)*v2=} (0)\")\n",
+    "print(f\"{v2*math.sqrt(2)=} (1,1)\")\n",
     "print(f\"{math.sqrt(2)*v2=} (1,1)\")"
    ]
   },
@@ -858,38 +866,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 2,
    "id": "2d3fecb1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.11829166559831755"
+       "0.7853981633974483"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "v1.angle(v2)"
+    "v1.angle(v2, Vecteur(1,0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 2,
    "id": "31aa84a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5.9916187242356855"
+       "10.0"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
